--- a/Main/index.html
+++ b/Main/index.html
@@ -15,7 +15,7 @@
     body {
       font-family: 'Sans Mona', Arial, sans-serif;
       line-height: 1.6;
-      background-color:  #d0e8b9;
+      background-color:  #BFE899;
       color: #2879A7;
       margin: 0;
     }
@@ -63,6 +63,34 @@
 
     .content-box h2 {
       color: #2879A7;
+    }
+
+    .resume-box {
+      padding: 20px;
+      background-color: #ffffff;
+      border: 2px solid #2879A7;
+      border-radius: 5px;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .resume-box h2 {
+      color: #2879A7;
+      margin-bottom: 15px;
+    }
+
+    .resume-box a {
+      display: inline-block;
+      background-color: #2879A7;
+      color: white;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      margin: 5px;
+    }
+
+    .resume-box a:hover {
+      background-color: #1f5e85;
     }
 
     .button {
@@ -154,6 +182,10 @@
         padding: 15px;
       }
 
+      .resume-box {
+        padding: 15px;
+      }
+
       .button {
         font-size: 0.9rem;
         padding: 8px 15px;
@@ -214,6 +246,13 @@
         <p>Download my school work templates for free!</p>
         <button class="button" onclick="downloadTemplate()">Download Template</button>
       </section>
+    </div>
+
+    <div class="resume-box">
+      <h2>Resume / CV </h2>
+      <a href="path/to/technical_resume.pdf" target="_blank">Technical Resume</a>
+      <a href="path/to/policy_resume.pdf" target="_blank">Policy Resume</a>
+      <a href- "path/to/CV.pdf" target="_blank">Curriculum Vitae</a>
     </div>
 
     <div class="profile-contact">
