--- a/Main/index.html
+++ b/Main/index.html
@@ -63,6 +63,11 @@
 
     .content-box h2 {
       color: #2879A7;
+      text-align: center;
+    }
+
+    .content-box p {
+      text-align: justify;
     }
 
     .resume-box {
@@ -249,10 +254,10 @@
     </div>
 
     <div class="resume-box">
-      <h2>Resume / CV </h2>
+      <h2>Resumes / CV</h2>
       <a href="path/to/technical_resume.pdf" target="_blank">Technical Resume</a>
       <a href="path/to/policy_resume.pdf" target="_blank">Policy Resume</a>
-      <a href- "path/to/CV.pdf" target="_blank">Curriculum Vitae</a>
+      <a href="path/to/academic_cv.pdf" target="_blank">Curriculum Vitae</a>
     </div>
 
     <div class="profile-contact">
