--- a/Main/index.html
+++ b/Main/index.html
@@ -56,7 +56,7 @@
     .content-box {
       padding: 20px;
       background-color: #ffffff;
-      border-left: 5px solid #2879A7;
+      border: 2px solid #2879A7;
       border-radius: 5px;
       margin-bottom: 20px;
     }
@@ -116,6 +116,10 @@
 
     .section {
       margin-bottom: 20px;
+      padding: 20px;
+      background-color: #ffffff;
+      border: 2px solid #2879A7;
+      border-radius: 10px;
     }
 
     .profile-contact {
@@ -125,7 +129,7 @@
     }
 
     .portrait {
-      max-width: 40%;
+      max-width: 30%;
       height: auto;
       border-radius: 10px;
     }
@@ -228,14 +232,16 @@
 
   <div class="container">
     <div class="content-box">
-      <section id="about" class="section">
+      <section id="about">
         <h2>About Me</h2>
         <p>Hello! I am a Physics and Astronomy student showcasing my work and research. Explore my site to learn more!</p>
       </section>
+    </div>
 
-      <section id="research" class="section">
-        <h2>Research</h2>
-        <p>Here you can find my latest research projects and papers.</p>
+    <div class="content-box">
+      <section id="research">
+        <h2>Research and Templates</h2>
+        <p>Here you can find my latest research projects and papers, as well as downloadable templates for school work.</p>
         <button class="button" onclick="showResearch()">Show Research</button>
         <div id="research-list" style="display:none; margin-top:10px;">
           <ul>
@@ -244,20 +250,17 @@
             <li>Project 3: Dark Matter Mapping</li>
           </ul>
         </div>
-      </section>
-
-      <section id="templates" class="section">
-        <h2>Templates</h2>
-        <p>Download my school work templates for free!</p>
-        <button class="button" onclick="downloadTemplate()">Download Template</button>
+        <button class="button" onclick="downloadTemplate()" style="margin-top: 15px;">Download Templates</button>
       </section>
     </div>
 
-    <div class="resume-box">
-      <h2>Resumes / CV</h2>
-      <a href="path/to/technical_resume.pdf" target="_blank">Technical Resume</a>
-      <a href="path/to/policy_resume.pdf" target="_blank">Policy Resume</a>
-      <a href="path/to/academic_cv.pdf" target="_blank">Curriculum Vitae</a>
+    <div class="content-box">
+      <section>
+        <h2>Resumes / CV</h2>
+        <a href="path/to/technical_resume.pdf" target="_blank">Technical Resume</a>
+        <a href="path/to/policy_resume.pdf" target="_blank">Policy Resume</a>
+        <a href="path/to/academic_cv.pdf" target="_blank">Curriculum Vitae</a>
+      </section>
     </div>
 
     <div class="profile-contact">
